# tensorrt

./: .gitignore  Cargo.toml  MEASUREMENTS.md  README.md  STRUCTURE.md  TODO.md  push.sh
.claude/rules/: mission.md
data/: .gitignore
data/ckpt/: .gitignore
data/convert/: .gitignore
docker/: Dockerfile.desktop  Dockerfile.jetson
docs/plans/: model-pipeline.md  trtllm-executor-ffi-bindings.md
experiments/: README.md
experiments/llama3/: Cargo.toml
experiments/llama3/src/: main.rs
experiments/llama3/src/onnx/: mod.rs
experiments/llama3/src/tensorrt/: mod.rs
experiments/moonshine/: Cargo.toml
experiments/moonshine/src/: main.rs  onnx_impl.rs  tensorrt_impl.rs
experiments/parakeet/: Cargo.toml  build.rs
experiments/parakeet/src/: featureextractor.rs  main.rs  onnx_impl.rs  tensorrt_impl.rs  tokenizer.rs
experiments/parakeet/src/kernels/: argmax.cu
experiments/parakeet/src/onnx/: decoder.rs  encoder.rs  featureextractor.rs  mod.rs  tokenizer.rs
experiments/pocket/: Cargo.toml
experiments/pocket-voice/: Cargo.toml
experiments/pocket-voice/src/: main.rs
experiments/pocket/src/: main.rs  onnx_impl.rs
onnx/: Cargo.toml  README.md  build.rs
onnx/src/: lib.rs
scripts/: build_engine.sh  convert.sh  download.sh
tensorrt/: Cargo.toml  README.md  build.rs
tensorrt/src/: executor.rs  lib.rs  runtime.rs
tensorrt/src/ffi/: mod.rs  trt_runtime.cpp  trt_runtime.h  trt_runtime_ffi.rs  trtllm_executor.cpp  trtllm_executor.h  trtllm_ffi.rs
