[package]
name = "llama3"
version = "0.1.0"
edition = "2024"

[features]
trt = ["tensorrt/trt"]
cuda = []
jetson = []

[dependencies]
tensorrt = { path = "../../tensorrt", optional = true }
onnx = { path = "../../onnx" }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
